2007-01-31 Nicolas Roffet <nicolas-kde@roffet.com>
	* Full rewrite of the central graphic widget with QGraphicsView to improve the user experience and to provide cool effects in the future ,)
	* Full scalable central graphic widget (with some SVG elements: the balls and the cross): KBBScalableGraphicWidget.
	* Old central widget KBBGraphic is still there and can be activated by changing 2 lines in the code.
	* Set the version number to "0.4.0-SVN" as the changes are now big and visible.
	* Bug correction: Number of placed balls is now immediately updated.
	* Small temporary regressions: It's not possible to play with the keyboard anymore. User  documentation is now out-dated.

2007-01-21 Nicolas Roffet <nicolas-kde@roffet.com>
	* In KBBGraphic: Fusion of the methodes "setSize" and "clear" in a new one "newGame". (Code optimisation)

2007-01-20 Nicolas Roffet <nicolas-kde@roffet.com>
	* Big clean-up (2nd part) to have a clean API between the logical game and the graphic widget (to be able to substitute it with a new one in the future).
	* User input is now managed by the graphic widget.
	* Full rewrite of the methode that calculates the trajectory of the laser ray.
	* Object "gameBoard" removed.
	* Documentation of the code of the class KBBBoard.

2007-01-18 Nicolas Roffet <nicolas-kde@roffet.com>
	* New private methode "KBBGame::comfirmGameEndIfNeeded()" to avoid duplication of code.
	* New member variable "m_gameReallyStarted" to avoid to annoy the user with the confirmation of the end of the game when the player didn't really start to play.
	* Removed several redundant tests "if (running)".
	* small clean up in "KBBGame::giveUp()".
	* Clean up: division of the class (and file) KBBGame in 2 classes (and 2 files) to remove a lot of dependencies to the graphic widget (KBBGraphic) in the main window:
	    - KBBGame: main window of the game
	    - KBBBoard: logical board of the game

1999-06-07  Petter Reinholdtsen <pere@td.org.uit.no>