@@ -1,33 +1,0 @@
-/* XPM */
-static char * done_xpm[] = {
-"26 26 4 1",
-" 	c None",
-".	c #000000000000",
-"X	c #C71B9E799E79",
-"o	c #861786178617",
-"                          ",
-"                          ",
-"                          ",
-"              ..          ",
-"             .X.          ",
-"            .Xo.          ",
-"            .Xo.          ",
-"            .XX.          ",
-"            .XX.          ",
-"            .XX.          ",
-"           ..XX.          ",
-"      ......XXX.          ",
-"     .XXX.XoXXXX.         ",
-"    .XXXX.XoXXXXX.        ",
-"    .....XXoXXXXXX......  ",
-"    .XXXX.XoXXXXXXoXXXX.  ",
-"    .XXXX.XXoXXXXoXXXXX.  ",
-"    .....XXXXooooXXXoXX.  ",
-"    .XXXX.XXXXXXXXXoXXX.  ",
-"     .XXXX.XXoXXXXXoXXX.  ",
-"     .....XXoXXXX.......  ",
-"     .XXXX.XoXX..         ",
-"      .........           ",
-"                          ",
-"                          ",
-"                          "};
