@@ -1,28 +1,0 @@
-/* XPM */
-static char * giveup_xpm[] = {
-"22 21 4 1",
-" 	c None",
-".	c #000000000000",
-"X	c #B6DA8E388617",
-"o	c #FFFFFFFFFFFF",
-"                      ",
-"       ..             ",
-"       .X....         ",
-"      .XX.ooo.        ",
-"      .X.ooooo.       ",
-"      .X.oooooo...    ",
-"     .XX.ooooooooo.   ",
-"     .X.ooooooooooo.  ",
-"     .X.oooooooooooo. ",
-"    .XX.oooooooooooo. ",
-"    .X. ....oooooooo. ",
-"    .X.     .ooooooo. ",
-"    .X.      .ooooo.  ",
-"   .XX.       ...oo.  ",
-"   .X.           .o.  ",
-"   .X.            .   ",
-"  .XX.                ",
-"  .X.                 ",
-"   ..                 ",
-"                      ",
-"                      "};
